Mon Oct 22 Kuwashima
 *riconv.c
 *riconv.h
	recycle iconv instance.
 *test/test.rb
	add cases for test_kjconv
Sun Sep 23 arton
 *rjb.c
	version 1.0.9
	convert to Ruby's type if Rjb::primitive_converion is enalbed and the result type is java.lang.Object
	support the object conversion for a bignum to long.
Sat Sep 15 arton
 *rjb.c
	version 1.0.8
	correction of 1.0.7, support long type.
Fri Sep 14 arton
 *rjb.c
	version 1.0.7
	add auto primitive conversion toggled by Rjb::primitive_conversion
 *test.rb
	add test_auto_conv
Sun Jun 17 arton
 *rjb.c
        add method aliases.
	setXxYy -> xx_yy=
	getXxYy -> xx_yy
	isXxYy  -> xx_yy?
	xxYyZz  -> xx_yy_zz
 *test.rb
	add a test for the method alias feature.
Tue Nov 21 arton
 *rjb.c
       Skip the constant registering process, if the constant was already defined. 
 *load.c
 *rjb.c
 *rjbexception.c
 *rjb.h	 
	add prefix 'rjb' for externed symbol names to avoid confliction.
	
Sun Oct 08 arton (on behalf of richard apodaca)
 *load.c
	support AMD64
	
Mon Sep 11 arton
 *test.rb
	add a test of arguments types are various array.
 *Test.java
	add a test of arguments types are various array.
 *rjb.c
	accept nil for array parameter.
Sun Sep 10 arton
 *test.rb
	add a test of return type is an object wrapped an array
 *Test.java
	add a method that returns an object wrapped an array
 *rjb.c
	check array-mark in jv2rv for returned object was an array
Tue Aug 1 arton
 *load.c
 *rjb.c
	change load pathname of the bridge class.
 *post-install.rb
	add for remove previous installed rjb.so.
 *rjb.rake
	add for build Gem.
 *rjb.rb	
	for preparing the pathname constant of the bridge class.
 *depend
	chage binary name from rjb.so to rjbcore.so
 *extconf.rb
	chage binary name from rjb.so to rjbcore.so
	
Mon Jul 31 arton
 *load.c
	fix buffer allocation

Sun Jul 16 (Jun 22) Kuwashima and arton
 *rjb.c
	version 0.2.8
 *MANIFEST
 *depend	
 *load.c
 *rjbexception.c
	change jni.h to jniwrap.h.